--- a/_includes/work.html
+++ b/_includes/work.html
@@ -8,7 +8,7 @@
 			<div class="thumb-container">
 			
 				{% for project in site.data.settings.projects %}
-					<div class="thumb-unit" style="background-image: url(/assets/img/work/{{project.folder}}/thumb.jpg)">	
+					<div class="thumb-unit" style="background-image: url(assets/img/work/{{project.folder}}/thumb.jpg)">	
 						<div class="thumb-overlay">
 							<strong>{{ project.name }}</strong>
 							<br>
