--- a/assets/css/3-modules/_about.sass
+++ b/assets/css/3-modules/_about.sass
@@ -10,7 +10,7 @@
 
 	.face-img
 		+size(200px)
-		background: url(/assets/img/face.png)
+		background: url(assets/img/face.png)
 		order: 2
 
 	[class^="icon-"]
