Please enter the commit message for your changes. Lines starting

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -3,7 +3,7 @@
 	<h3 id="know-me">Know Me</h3>
 
 	<div class="face-lockup">
-		<div class="face-img" style="background: url(assets/img/face.jpg);"></div>
+		<div class="face-img" style="background: url(assets/img/face.png);"></div>
 
 		<div class="icon-brush">{% include icons/icon-brush.html %}</div>
 		<div class="icon-code">{% include icons/icon-code.html %}</div>
