--- a/_includes/about.html
+++ b/_includes/about.html
@@ -3,7 +3,7 @@
 	<h3 id="know-me">Know Me</h3>
 
 	<div class="face-lockup">
-		<div class="face-img" style="background-image: url(assets/{{ site.data.settings.avatar }}"></div>
+		<div class="face-img" style="background-image: url(assets/img/face.jpg)"></div>
 
 		<div class="icon-brush">{% include icons/icon-brush.html %}</div>
 		<div class="icon-code">{% include icons/icon-code.html %}</div>
