--- a/assets/css/2-base/_vars.sass
+++ b/assets/css/2-base/_vars.sass
@@ -1,7 +1,7 @@
 $primary-color: #F6C
 $text-color: #2E2D33
 $accent-color: #BD5248
-$bg-color: #F6F6F8
+$bg-color: #f8f8f8
 $link-color: #2133FF
 $selection-color: #FFF498
 
