--- a/assets/css/3-modules/_header.sass
+++ b/assets/css/3-modules/_header.sass
@@ -51,7 +51,8 @@ header
 
 @media (max-width: 640px)
 	header .logo
-		+size(40px)
+		+transform(scale(0.8))
+		+size(10px)
 		margin: 10px 0 0 10px
 
 	nav
