--- a/assets/css/3-modules/_contact.sass
+++ b/assets/css/3-modules/_contact.sass
@@ -28,7 +28,7 @@ section
 	text-align: center
 	color: $secondary
 	font:
-		family: 'Open Sans'
+		family: Open Sans
 		size: 72px
 		weight: 300
 	padding-bottom: 70px
