--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,6 +1,6 @@
 <section class="section-aboutme">
 	
-	<h3 id="know-me">Know Me</h3>
+	<h3 id="know-me">About</h3>
 
 	<div class="face-lockup">
 		<div class="face-img" style="background-image: url(assets/img/face.jpg)"></div>
