--- a/_includes/work.html
+++ b/_includes/work.html
@@ -1,6 +1,6 @@
 <section class="alt-section section-work">
 
-	<h3 id="work">My Work</h3>
+	<h3 id="work">Things I Do</h3>
 
 	<div class="work-belt">
 
