--- a/assets/css/3-modules/_header.sass
+++ b/assets/css/3-modules/_header.sass
@@ -24,8 +24,8 @@ header
 		text-align: center	
 		font:
 			size: 60px
-			weight: 700
-			family: 'sans-serif'
+			weight: 900
+			family: Lato
 		color: white
 		text-transform: uppercase
 		letter-spacing: 0.05em
@@ -43,9 +43,10 @@ header
 		text-align: center
 		font:
 			size: 16px
-			weight: 700
-			family: 'sans-serif'
+			weight: 900
+			family: Lato
 		text-transform: uppercase
+		letter-spacing: 0.06em
 		line-height: 1
 		color: white
 
